# StudyBible

./: .gitignore  .gitmodules  ANDROID_FIXES.md  CLAUDE.md  Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  studybible-release-key.keystore  tailwind.config.js
.claude/: settings.local.json
assets/: main.css
assets/icons/: README.md
src/: main.rs  main_backup.rs  main_clean.rs  main_debug.rs  main_temp.rs  services.rs  storage.rs  types.rs
src/components/: mod.rs
src/components/layout/: header.rs  mod.rs  sidebar.rs
src/components/modals/: mod.rs  settings.rs
src/data/: kjv_books.json  kjv_metadata.json  mod.rs  niv_metadata.json  nkjv_metadata.json  tamil_books.json  tamil_metadata.json  translations_index.json  unified_bible_index.json
