[package]
name = "studybible"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["desktop", "mobile"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
theme = { version = "0.0.3", features = ["dio"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
directories = "6.0.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
thiserror = "2.0.16"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
