[package]
name = "studybible"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["desktop", "mobile"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
theme = { version = "0.0.3", features = ["dio"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
